Revision history for Perl extension Plack-Middleware-Assets-RailsLike

{{$NEXT}}
    - Uses prepare_app method to set default values.

0.02 2013-06-06T08:50:56Z

    - Adds default configuration values.
    - Adds search_path option.
    - Adds Expires header to the HTTP response.
    - Enables minifier by default.

0.01 2013-06-04T14:46:04Z

    - original version
